[workspace]
members = [
	"node",
	"runtime/indranet",
	"pallets/custom-signatures",
	"pallets/precompiles/sr25519",
	"pallets/precompiles/substrate-ecdsa",
]

[profile.release]
# Selendra runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
