[package]
name = "indranet-node"
version = "0.2.0"
authors = ["Selendra <info@selendra.org>"]
description = "Indranet collator implementation in Rust."
build = "build.rs"
edition = "2021"
default-run = "indranet"

[[bin]]
name = "indranet"
path = "bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# RPC related dependencies
jsonrpsee = { version = "0.15.1", features = ["server"] }

# third-party dependencies
async-trait = "0.1.57"
clap = { version = "3.2.17", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
futures = { version = "0.3.21" }
log = "0.4.17"
parity-util-mem = { version = "0.11.0", default-features = false, features = ["jemalloc-global"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0"
url = "2.2.2"

# primitives
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

# client dependencies
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

# frame dependencies
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

# CLI-specific dependencies
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", optional = true }

substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

# Frontier dependencies
fc-consensus = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.30" }
fc-db = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.30" }
fc-mapping-sync = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.30" }
fc-rpc = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.30", features = ["rpc_binary_search_estimate"] }
fc-rpc-core = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.30" }
fp-consensus = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.30" }
fp-evm = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.30", default-features = false }
fp-rpc = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.30" }
fp-storage = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.30" }
pallet-ethereum = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.30", features = ["forbid-evm-reentrancy"] }
pallet-evm = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.30", features = ["forbid-evm-reentrancy"] }

# indranet-specific dependencies
indranet-runtime = { path = "../runtime/indranet" }
indranet-primitive = { path = "../primitives" }

# forests dependencies
forests-client-cli = { git = "https://github.com/selendra/selendra", tag = "0.2.4" }
forests-client-consensus-aura = { git = "https://github.com/selendra/selendra", tag = "0.2.4" }
forests-client-consensus-common = { git = "https://github.com/selendra/selendra", tag = "0.2.4" }
forests-client-consensus-relay-chain = { git = "https://github.com/selendra/selendra", tag = "0.2.4" }
forests-client-network = { git = "https://github.com/selendra/selendra", tag = "0.2.4" }
forests-client-service = { git = "https://github.com/selendra/selendra", tag = "0.2.4" }
forests-primitives-core = { git = "https://github.com/selendra/selendra", tag = "0.2.4" }
forests-primitives-parachain-inherent = { git = "https://github.com/selendra/selendra", tag = "0.2.4" }
forests-relay-chain-inprocess-interface = { git = "https://github.com/selendra/selendra", tag = "0.2.4" }
forests-relay-chain-interface = { git = "https://github.com/selendra/selendra", tag = "0.2.4" }
forests-relay-chain-rpc-interface = { git = "https://github.com/selendra/selendra", tag = "0.2.4" }

# selendra dependencies
selendra-cli = { git = "https://github.com/selendra/selendra", tag = "0.2.4", optional = true }
selendra-parachain = { git = "https://github.com/selendra/selendra", tag = "0.2.4" }
selendra-primitives = { git = "https://github.com/selendra/selendra", tag = "0.2.4" }
selendra-service = { git = "https://github.com/selendra/selendra", tag = "0.2.4" }

# benchmark dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", optional = true }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", optional = true }

# try-runtime
frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", optional = true }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", optional = true }

[build-dependencies]
build-script-utils = { package = "substrate-build-script-utils", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", optional = true }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", optional = true }

[features]
default = ["sc-cli", "selendra-cli", "sc-service", "sc-service/rocksdb"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-benchmarking-cli",
	"indranet-runtime/runtime-benchmarks",
	"selendra-cli/runtime-benchmarks",
]
cli = ['try-runtime-cli']
try-runtime = ["indranet-runtime/try-runtime", "try-runtime-cli"]
