[package]
name = "indranet-primitive"
version = "0.2.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[dependencies]
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }

[features]
default = ["std"]
std = [
	"sp-consensus-aura/std",
	"sp-io/std",
	"sp-std/std",
]
