[package]
name = "indranet-runtime-common"
version = "1.0.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# Substrate
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }

# Selendra
selendra-primitives = { git = "https://github.com/selendra/selendra", tag = "0.2.4", default-features = false }
selendra-runtime-common = { git = "https://github.com/selendra/selendra", tag = "0.2.4", default-features = false }
xcm = { git = "https://github.com/selendra/selendra", tag = "0.2.4", default-features = false }
xcm-executor = { git = "https://github.com/selendra/selendra", tag = "0.2.4", default-features = false }
pallet-collator-selection = { git = "https://github.com/selendra/selendra", tag = "0.2.4", default-features = false }

[dev-dependencies]
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-io/std",
	"sp-std/std",
	"sp-consensus-aura/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-asset-tx-payment/std",
	"pallet-assets/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"selendra-primitives/std",
	"selendra-runtime-common/std",
	"pallet-collator-selection/std",
]
