[package]
name = "indranet-runtime"
version = "0.3.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"
description = "Indranet parachain runtime"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
hex-literal = { version = "0.3.4" }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
smallvec = "1.10.0"

# Substrate
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false, optional = true }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false, optional = true}

pallet-asset-tx-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-uniques = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }


# Selendra
selendra-runtime-constants = { git = "https://github.com/selendra/selendra", branch = "master", default-features = false }
selendra-core-primitives = { git = "https://github.com/selendra/selendra", branch = "master", default-features = false }
selendra-parachain = { git = "https://github.com/selendra/selendra", branch = "master", default-features = false }
selendra-runtime-common = { git = "https://github.com/selendra/selendra", branch = "master", default-features = false }

# Selendra Xcm
pallet-xcm = { git = "https://github.com/selendra/selendra", branch = "master", default-features = false }
pallet-xcm-benchmarks = { git = "https://github.com/selendra/selendra", branch = "master", default-features = false, optional = true }
xcm = { git = "https://github.com/selendra/selendra", branch = "master", default-features = false }
xcm-builder = { git = "https://github.com/selendra/selendra", branch = "master", default-features = false }
xcm-executor = { git = "https://github.com/selendra/selendra", branch = "master", default-features = false }

# Forest
pallet-collator-selection = { git = "https://github.com/selendra/forest", branch = "master", default-features = false }
parachain-info = { git = "https://github.com/selendra/forest", branch = "master", default-features = false }
forest-pallet-aura-ext = { git = "https://github.com/selendra/forest", branch = "master", default-features = false }
forest-pallet-dmp-queue = { git = "https://github.com/selendra/forest", branch = "master", default-features = false }
forest-pallet-parachain-system = { git = "https://github.com/selendra/forest", branch = "master", default-features = false }
forest-pallet-session-benchmarking = { git = "https://github.com/selendra/forest", branch = "master", default-features = false }
forest-pallet-xcm = { git = "https://github.com/selendra/forest", branch = "master", default-features = false }
forest-pallet-xcmp-queue = { git = "https://github.com/selendra/forest", branch = "master", default-features = false }
forest-primitives-core = { git = "https://github.com/selendra/forest", branch = "master", default-features = false }
forest-primitives-timestamp = { git = "https://github.com/selendra/forest", branch = "master", default-features = false }
forest-primitives-utility = { git = "https://github.com/selendra/forest", branch = "master", default-features = false }

# Frontier
fp-rpc = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.33", default-features = false }
fp-self-contained = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.33", default-features = false }
pallet-base-fee = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.33", default-features = false }
pallet-ethereum = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.33", default-features = false, features = ["forbid-evm-reentrancy"] }
pallet-evm = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.33", default-features = false, features = ["forbid-evm-reentrancy"] }
pallet-evm-precompile-blake2 = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.33", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.33", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.33", default-features = false }
pallet-evm-precompile-ed25519 = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.33", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.33", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.33", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/selendra/frontier", branch = "polkadot-v0.9.33", default-features = false }

# Local Pallet
pallet-custom-signatures = { path = "../../pallets/custom-signatures", default-features = false }
pallet-evm-precompile-sr25519 = { path = "../../pallets/precompiles/sr25519", default-features = false }
pallet-evm-precompile-substrate-ecdsa = { path = "../../pallets/precompiles/substrate-ecdsa", default-features = false }
parachains-common = { path = "../common", default-features = false }

[dev-dependencies]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

[features]
default = [ "std" ]
runtime-benchmarks = [
    "sp-runtime/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
    "pallet-xcm-benchmarks/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"forest-pallet-session-benchmarking/runtime-benchmarks",
	"forest-pallet-xcmp-queue/runtime-benchmarks",
]
try-runtime = [
    "frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
    "pallet-asset-tx-payment/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-session/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-uniques/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-xcm/try-runtime",
	"pallet-custom-signatures/try-runtime",
	"parachain-info/try-runtime",
	"forest-pallet-aura-ext/try-runtime",
	"forest-pallet-dmp-queue/try-runtime",
	"forest-pallet-parachain-system/try-runtime",
	"forest-pallet-xcm/try-runtime",
	"forest-pallet-xcmp-queue/try-runtime",
]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",

    "sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"fp-rpc/std",
	"fp-self-contained/std",
    
    "frame-executive/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
    "frame-support/std",

    "pallet-asset-tx-payment/std",
	"pallet-assets/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-multisig/std",
	"pallet-proxy/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-uniques/std",
	"pallet-utility/std",
	"pallet-xcm/std",
	"pallet-sudo/std",
	"pallet-custom-signatures/std",
	"pallet-evm-precompile-sr25519/std",
	"pallet-evm-precompile-substrate-ecdsa/std",
	"pallet-base-fee/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-precompile-blake2/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-bn128/std",
	"pallet-evm-precompile-dispatch/std",
	"pallet-evm-precompile-ed25519/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-sha3fips/std",

	"parachain-info/std",
	"parachains-common/std",

    "selendra-runtime-constants/std",
    "selendra-core-primitives/std",
	"selendra-parachain/std",
	"selendra-runtime-common/std",

	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",

	"forest-pallet-aura-ext/std",
	"forest-pallet-dmp-queue/std",
	"forest-pallet-parachain-system/std",
	"forest-pallet-xcm/std",
	"forest-pallet-xcmp-queue/std",
	"forest-primitives-core/std",
	"forest-primitives-timestamp/std",
	"forest-primitives-utility/std",
]
